--- a/src/style/base/_base.scss
+++ b/src/style/base/_base.scss
@@ -3,6 +3,7 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
+  background-color: #000;
 }
